[package]
name = "doomba"
version = "0.1.0"
authors = ["Andriy Kushnir (Orhideous) <me@orhideous.name>"]
description = "Rust API to communicate with Roomba robots"
homepage = "https://github.com/Orhideous/doomba"
readme = "README.md"
keywords = [
    "Roomba",
    "IoT",
    "API",
]
license = "MIT"
repository = "https://github.com/Orhideous/doomba"
edition = "2021"

[dependencies]
thiserror = "1"
paho-mqtt = { version = "0.11.1", features = ["vendored-ssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert-json-diff = "2.0"
